--- a/index.html
+++ b/index.html
@@ -2,11 +2,78 @@
 
 <head> 
 <title> favorites / bookmark title goes here </title>
+ <link rel="shortcut icon" href="/img/favicon.gif" type="image/x-icon" />
+ <link href="/css/bootstrap.min.css" rel="stylesheet">
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
 
-<body bgcolor="white" text="blue">
+<body data-spy="scroll" data-target=".subnav" data-offset="50">
+ <!-- Navbar
+    ================================================== -->
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
 
+	  <a class="brand" href="/">Scala Puzzlers</a>
+
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li>
+                <a id="navbar-home" href="/index.html">Home</a>
+              </li>
+              <li>
+                <a id="navbar-contribute" href="/contribute.html">How to Contribute</a>
+              </li>
+              <li>
+                <a id="navbar-contact" href="/contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+ <script type="text/javascript">
+    String.prototype.endsWith = function(suffix) {
+      return this.indexOf(suffix, this.length - suffix.length) !== -1;
+    };
+
+    var pathToID = {
+      "/"                        : '#navbar-home',
+      "/index.html"              : '#navbar-home', 
+      "/contribute.html"	 : '#navbar-contribute',   
+      "/contact.html"         	 : '#navbar-contact'
+    };
+
+    $(document).ready(function() {
+      function mapPathToID(path) {
+        var key;
+        var id = null;
+        for (key in pathToID) {
+          if (path === key) {
+            id = pathToID[key];
+            break;
+          }
+        }
+
+        return id;
+      };
+
+      var id = mapPathToID(window.location.pathname);
+      if (id != null) {
+        $(id).addClass("active");
+      }
+    });
+    </script>
+
+<header class="page-header" id="overview">
 <h1> Hello world </h1>
+</header>
 
 Hello world! 
 
