--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
  <link rel="shortcut icon" href="/img/favicon.gif" type="image/x-icon" />
  <link href="/css/bootstrap.min.css" rel="stylesheet">
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+ <script type="text/javascript">
+
+   var _gaq = _gaq || [];
+   _gaq.push(['_setAccount', 'UA-31486114-1']);
+   _gaq.push(['_trackPageview']);
+
+   (function() {
+     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+   })();
+
+ </script>
 </head>
 
 <body data-spy="scroll" data-target=".subnav" data-offset="50">
@@ -89,17 +102,23 @@
         <div class="span9">
 	  <div class="headline">
             <h1>Yet another fun way to learn Scala</h1>
-            <p>Welcome to Scala Puzzlers, a central repository of <i>Traps, Pitfalls and Corner Cases</i> in Scala language.<br/>
+            <p>Welcome to Scala Puzzlers, a central repository of <i>Traps, Pitfalls and Corner Cases</i> in Scala language.<br/><br/>
+		Prepare to be surprised, entertained and...well, puzzled! What is presented here is a selection of seemingly simple examples which demonstrate 		that there's plenty of head-scratching left in Scala! 
+		Let your mind be challenged by unexpected and unintuitive behaviour and results and learn something in the process. 		
+<br/><br/>
             All puzzlers are conveniently listed on the left side of the page. </p>
 	  </div>	
 	  <div class="row-fluid">
  	    <div class="span6 headline-unit">
 	      <h2>Your contributions are welcomed</h2>
-	      <p>Please follow <a href="/contribute.html">these instructions</a> in order to get your puzzlers included. </p>
+	      <p>Have a puzzler you would like to share with the rest of the community?
+		Please follow <a href="/contribute.html">these instructions</a> in order to get it included to the repository. 
+		And don't worry, you will get properly creditted for your contribtuion!</p>
 	    </div>	  
  	    <div class="span6 headline-unit">
 	      <h2>We would love to hear from you</h2>
-	      <p>If you would like to leave us any kind of feedback, please <a href="/feedback.html">contact us</a>.
+	      <p>Any kind of feedback is appreciated. 
+		If there is something you would like to let us know, please <a href="/feedback.html">contact us</a>.
 		</p>
 	    </div>
           </div>
