--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<html> 
+<!DOCTYPE html>
+<html lang="en"> 
 
 <head> 
 <title> Scala Puzzlers </title>
  <link rel="shortcut icon" href="/img/favicon.gif" type="image/x-icon" />
  <link href="/css/bootstrap.min.css" rel="stylesheet">
+ <link href="/css/prettify.css" type="text/css" rel="stylesheet" />
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+ <script type="text/javascript" src="/js/prettify.js"></script>
  <script type="text/javascript">
 
    var _gaq = _gaq || [];
@@ -16,11 +19,12 @@
      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
    })();
+  
 
  </script>
 </head>
 
-<body data-spy="scroll" data-target=".subnav" data-offset="50">
+<body data-spy="scroll" data-target=".subnav" data-offset="50"">
   <!-- Navbar
    ================================================== -->
     <div class="navbar navbar-fixed-top">
@@ -82,6 +86,8 @@
           $(id).addClass("active");
         }
       });
+
+     
     </script>
 
     <div class="container-fluid">
@@ -90,18 +96,48 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Puzzlers</li>
-              <li class="active"><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>             
+              <li><a href="#" id="pzzlr-001">Hi there!</a></li>
+              <li><a href="#" id="pzzlr-002">Match me</a></li>
+              <li><a href="#" id="pzzlr-003">UPSTAIRS downstairs</a></li> 
+              <li><a href="#" id="pzzlr-004">The Trouble With Traits</a></li>
+	      <li><a href="#" id="pzzlr-005">The Trouble With Traits 2</a></li>
+	      <li><a href="#" id="pzzlr-006">The Missing List</a></li>  
+	      <li><a href="#" id="pzzlr-007">Seeing Double</a></li>                                                
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->	
 
-        <div class="span9">
+        <script type="text/javascript">     
+	var activeElem = null;
+
+        $('a[id|="pzzlr"]').each(function(index, elem) {          
+	  $(elem).click(function() {
+	    $('#prime-space').load('puzzlers/' + elem.id + '.html', function() {
+	      prettyPrint();
+ 	      $('#show-and-tell').click(function() {
+		$('#show-and-tell').addClass("disabled");
+		$('#correct-answer').addClass("correct-answer");
+		$('#explanation').show('slow');		
+	      });
+	    }); 
+	    
+	    if (activeElem != null) {
+	      $(activeElem).removeClass("active");           
+	    }
+
+	    activeElem = $(elem).parent();
+            $(activeElem).addClass("active");
+	  });          
+	});
+
+	
+        </script> 
+
+        <div id="prime-space" class="span9">
 	  <div class="headline">
-            <h1>Yet another fun way to learn Scala</h1>
+            <h1>Yet another fun way to learn
+	   <img src="img/scala-logo.png" alt="Scala" style="padding-bottom:15px;padding-left:10px"/></h1><br/>
             <p>Welcome to Scala Puzzlers, a central repository of <i>Traps, Pitfalls and Corner Cases</i> in Scala language.<br/><br/>
 		Prepare to be surprised, entertained and...well, puzzled! What is presented here is a selection of seemingly simple examples which demonstrate 		that there's plenty of head-scratching left in Scala! 
 		Let your mind be challenged by unexpected and unintuitive behaviour and results and learn something in the process. 		
@@ -117,7 +153,7 @@
 	    </div>	  
  	    <div class="span6 headline-unit">
 	      <h2>We would love to hear from you</h2>
-	      <p>Any kind of feedback is appreciated. 
+	      <p>Any kind of feedback is appreciated, including the ones about this website but also about the puzzlers themselves.
 		If there is something you would like to let us know, please <a href="/feedback.html">contact us</a>.
 		</p>
 	    </div>
