--- a/puzzlers/pzzlr-002.html
+++ b/puzzlers/pzzlr-002.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td>http://stackoverflow.com/questions/2727612/scalas-tuple-unwrapping-nuance</td>
+      <td><a target="_blank" href="http://stackoverflow.com/questions/2727612/scalas-tuple-unwrapping-nuance">stackoverflow</a></td>
     </tr>
     <tr>
       <td><strong>Tested with Scala version</strong></td>
