--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
           </a>
 
-	  <a class="brand" href="/">Scala Puzzlers</a>
+	  <a class="brand" href="/">Scala ?uzz<img src="img/l.png" alt="l" style="padding-bottom:10px;padding-left:2px;padding-right;2px"/>ers</a>
 
           <div class="nav-collapse collapse">
             <ul class="nav">
