--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div id="prime-space" class="span9">
 	  <div id="welcome-content" style="display:none">
 	  <div class="headline">
-            <h1>Yet another fun way to learn
+            <h1>A fun way to learn more about
 	   <img src="img/scala-logo.png" alt="Scala" style="padding-bottom:15px;padding-left:10px"/></h1><br/>
             <p>Welcome to Scala Puzzlers, a central repository of <i>Traps, Pitfalls and Corner Cases</i> in Scala language.<br/><br/>
 		Prepare to be surprised, entertained and...well, puzzled! What is presented here is a selection of seemingly simple examples which demonstrate 		that there's plenty of head-scratching left in Scala! 
