Contact and About pages

--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
                 <a id="navbar-contribute" href="/contribute.html">How to Contribute</a>
               </li>
               <li>
-                <a id="navbar-feedback" href="/feedback.html">Feedback</a>
+                <a id="navbar-contact" href="/contact.html">Contact</a>
               </li>
+	      <li>
+		<a id="navbar-about" href="/about.html">About</a>
+	      </li>
             </ul>
           </div>
         </div>
@@ -64,7 +67,8 @@
         "/"                        : '#navbar-home',
         "/index.html"              : '#navbar-home', 
         "/contribute.html"	 : '#navbar-contribute',   
-        "/feedback.html"         	 : '#navbar-feedback'
+        "/contact.html"          : '#navbar-contact',
+	"/about.html"		 : '#navbar-about'
       };
 
       $(document).ready(function() {
@@ -155,7 +159,7 @@
  	    <div class="span6 headline-unit">
 	      <h2>We would love to hear from you</h2>
 	      <p>Any kind of feedback is appreciated, including the ones about this website but also about the puzzlers themselves.
-		If there is something you would like to let us know, please <a href="/feedback.html">contact us</a>.
+		If there is something you would like to let us know, please <a href="/contact.html">contact us</a>.
 		</p>
 	    </div>
           </div>
