--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
               </li>
 	      <li>
 		<a id="navbar-about" href="/about.html">About</a>
-	      </li>	      
+	      </li>
             </ul>
           </div>
         </div>
@@ -67,8 +67,7 @@
         "/"                        : '#navbar-home',
         "/index.html"              : '#navbar-home', 
         "/contribute.html"	 : '#navbar-contribute',   
-        "/contact.html"         	 : '#navbar-contact',
-	"/about.html"		 : '#navbar-about'
+        "/contact.html"         	 : '#navbar-contact'
       };
 
       $(document).ready(function() {
@@ -114,14 +113,12 @@
 
         <div id="prime-space" class="span9">
 	  <div class="headline-unit">
-	    <h2>How to contribute</h2>
+	    <h2>Contact</h2>
             <p>
-	      <strong>1.</strong>  Fork our <a target="_blank" href="https://github.com/scalapuzzlers/scalapuzzlers.github.com">github repo</a>.<br/><br/>
-	      <strong>2.</strong>  In <code>puzzlers</code> directory, you will find a file called <code>pzzlr-template.html</code>. Make a copy of it,
-		following the naming convention: <code>pzzlr-???.html</code>. The three digit puzzler number should be the next increment of the latest puzzler in the repository. You might need to check the open pull requests to ensure the number is not already taken.<br/><br/>
-	      <strong>3.</strong>  In your newly created puzzler html file replace every occurence of word <em>PLACEHOLDER</em>&nbsp;&nbsp;with your own content. This should require only a minimum knowledge of HTML. Try to keep it simple, but feel free to get creative if your puzzler warrants some more sophisticated presentation. If unsure, please use other puzzler html files as a reference.<br/><br/>
-	      <strong>4.</strong>  Commit and push your puzzler html file (not the template) to github. Then issue a pull request. That's it! 
-	
+	      If you would like to stay up-to-date on newly added puzzlers, follow us on <a href="http://twitter.com/#!/ScalaPuzzlers">
+		<img src="img/twitter.png" alt="twitter" style="padding-bottom:10px;padding-left:2px;"/></a>
+		<br/><br/>
+	      For feedback and general inquiries you can reach us by <a href="malto:hello@scalapuzzlers.com">email</a>
             </p>
           </div> 
           <footer class="footer">
