Contact page mod

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,8 @@
         "/"                        : '#navbar-home',
         "/index.html"              : '#navbar-home', 
         "/contribute.html"	 : '#navbar-contribute',   
-        "/contact.html"         	 : '#navbar-contact'
+        "/contact.html"         	 : '#navbar-contact',
+	"/about.html"		 : '#navbar-about'
       };
 
       $(document).ready(function() {
