--- a/puzzlers/pzzlr-template.html
+++ b/puzzlers/pzzlr-template.html
@@ -1,4 +1,4 @@
-<h1>Match me</h1>
+<h1>PLACEHOLDER for title</h1>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -20,7 +20,7 @@
 </table>
 <div class="code-snippet">
   <h3>What does the following code do?</h3>
-  <pre class="prettyprint linenums lang-scala">
+  <pre class="prettyprint lang-scala">
 PLACEHOLDER
   </pre>
   <ol>  
