--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 	    <h2>About</h2>
             <p>
 	      This website, which is a joint effort by Andrew Phillips and <a href="http://twitter.com/#!/higherkinded">Nermin Serifovic</a>, 
-	      has been created with a purpose of collecting scattered examples of puzzlers into a central place on the web, that will portray some of Scala's quirks. Furthermore, the goal was to educate as well as ultimately help point out areas of the language that could be made less confusing.
+	      has been created with a purpose of collecting scattered examples of puzzlers into a central place on the web and portraying some of Scala's quirks. Furthermore, the goal was to educate as well as ultimately help point out areas of the language that could be made less confusing.
 	      
             </p>
           </div> 
