--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
 	      If you would like to stay up-to-date on newly added puzzlers, follow us on <a href="http://twitter.com/#!/ScalaPuzzlers">
 		<img src="img/twitter.png" alt="twitter" style="padding-bottom:10px;padding-left:2px;"/></a>
 		<br/><br/>
-	      For feedback and general inquiries you can reach us by <a href="malto:hello@scalapuzzlers.com">email</a>
+	      For feedback and general inquiries you can reach us by <a href="malto:contact@scalapuzzlers.com">email</a>
             </p>
           </div> 
           <footer class="footer">
