minor wording changes

--- a/about.html
+++ b/about.html
@@ -116,8 +116,8 @@
 	  <div class="headline-unit">
 	    <h2>About</h2>
             <p>
-	      This website, which is a joint effort by Andrew Phillips and <a href="http://twitter.com/#!/higherkinded">Nermin Serifovic</a>, 
-	      has been created with a purpose of collecting scattered examples of puzzlers into a central place on the web and portraying some of Scala's quirks. Furthermore, the goal was to educate as well as ultimately help point out areas of the language that could be made less confusing.
+	      This website, which is maintained by Andrew Phillips and <a href="http://twitter.com/#!/higherkinded">Nermin Serifovic</a>, 
+	      has been created with a purpose of collecting scattered examples of puzzlers into a central place on the web to portray some of Scala's quirks. Furthermore, the goal was to educate as well as ultimately help point out areas of the language that could be made less confusing.
 	      
             </p>
           </div> 
