General typos and text suggestions

--- a/about.html
+++ b/about.html
@@ -116,13 +116,12 @@
 	  <div class="headline-unit">
 	    <h2>About</h2>
             <p>
-	      This website, which is maintained by Andrew Phillips and <a href="http://twitter.com/#!/higherkinded">Nermin Serifovic</a>, 
-	      has been created with a purpose of collecting scattered examples of puzzlers into a central place on the web to portray some of Scala's quirks. Furthermore, the goal was to educate as well as ultimately help point out areas of the language that could be made less confusing.
+	      This website, which is maintained by <a href="mailto:andrew@scalapuzzlers.com">Andrew Phillips</a> and <a href="http://twitter.com/#!/higherkinded">Nermin Serifovic</a>, has been created with the purpose of collecting scattered examples of Scala puzzlers in a central location on the web to portray some of Scala's quirks. Furthermore, the goal was to educate as well as ultimately help point out areas of the language that could be made less confusing.
 	      
             </p>
           </div> 
           <footer class="footer">
-             Copyright 2012, Andrew Phillips and Nermin Serifovic
+             Copyright &copy; 2012, Andrew Phillips and Nermin Serifovic
 	  </footer>        
 	</div>
       </div>
