--- a/contribute.html
+++ b/contribute.html
@@ -118,14 +118,13 @@
             <p>
 	      <strong>1.</strong>  Fork our <a target="_blank" href="https://github.com/scalapuzzlers/scalapuzzlers.github.com">github repo</a>.<br/><br/>
 	      <strong>2.</strong>  In <code>puzzlers</code> directory, you will find a file called <code>pzzlr-template.html</code>. Make a copy of it,
-		following the naming convention: <code>pzzlr-???.html</code>. The three digit puzzler number should be the next increment of the latest puzzler in the repository. You might need to check the open pull requests to ensure the number is not already taken.<br/><br/>
-	      <strong>3.</strong>  In your newly created puzzler html file replace every occurence of word <em>PLACEHOLDER</em>&nbsp;&nbsp;with your own content. This should require only a minimum knowledge of HTML. Try to keep it simple, but feel free to get creative if your puzzler warrants some more sophisticated presentation. If unsure, please use other puzzler html files as a reference.<br/><br/>
-	      <strong>4.</strong>  Commit and push your puzzler html file (not the template) to github. Then issue a pull request. That's it! 
-	
+		following the naming convention: <code>pzzlr-???.html</code>. The three digit puzzler number should be the next increment of the latest puzzler in the repository. You might need to check the open <a target="_blank" href="https://github.com/scalapuzzlers/scalapuzzlers.github.com/pulls">pull requests</a> to ensure the number is not already taken.<br/><br/>
+	      <strong>3.</strong>  In your newly created puzzler HTML file replace every occurence of the word <em>PLACEHOLDER</em>&nbsp;&nbsp;with your own content. This should require only a minimum knowledge of HTML. Try to keep it simple, but feel free to get creative if your puzzler warrants some more sophisticated presentation. If unsure, please use other puzzler HTML files as a reference.<br/><br/>
+	      <strong>4.</strong>  Commit and push your puzzler HTML file (not the template) to github. Then issue a pull request. That's it!	
             </p>
           </div> 
           <footer class="footer">
-             Copyright 2012, Andrew Phillips and Nermin Serifovic
+             Copyright &copy; 2012, Andrew Phillips and Nermin Serifovic
 	  </footer>        
 	</div>
       </div>
