--- a/index.html
+++ b/index.html
@@ -145,29 +145,26 @@
 	  <div class="headline">
             <h1>A fun way to learn more about
 	   <img src="img/scala-logo.png" alt="Scala" style="padding-bottom:15px;padding-left:10px"/></h1><br/>
-            <p>Welcome to Scala Puzzlers, a central repository of <i>Traps, Pitfalls and Corner Cases</i> in Scala language.<br/><br/>
-		Prepare to be surprised, entertained and...well, puzzled! What is presented here is a selection of seemingly simple examples which demonstrate 		that there's plenty of head-scratching left in Scala! 
-		Let your mind be challenged by unexpected and unintuitive behaviour and results and learn something in the process. 		
+            <p>Welcome to Scala Puzzlers, a central repository of <i>Traps, Pitfalls and Corner Cases</i> in the Scala language.<br/><br/>
+		Prepare to be surprised, entertained and...well, puzzled! What is presented here is a selection of seemingly simple examples which demonstrate that there's plenty of head-scratching left in Scala. Let your mind be challenged by unexpected and unintuitive behaviour and results and learn something in the process. 		
 <br/><br/>
-            All puzzlers are conveniently listed on the left side of the page. </p>
+            Choose a puzzler from the left-hand list to get started!</p>
 	  </div>	
 	  <div class="row-fluid">
  	    <div class="span6 headline-unit">
 	      <h2>Your contributions are welcomed</h2>
-	      <p>Have a puzzler you would like to share with the rest of the community?
-		Please follow <a href="/contribute.html">these instructions</a> in order to get it included to the repository. 
-		And don't worry, you will get properly creditted for your contribtuion!</p>
+	      <p>Scala Puzzlers is a community effort! Have a puzzler you would like to share with the rest of the Scala community?	Please follow <a href="/contribute.html">these instructions</a> to submit your puzzler. 
+		And don't worry, you will be properly credited for your contribution!</p>
 	    </div>	  
  	    <div class="span6 headline-unit">
 	      <h2>We would love to hear from you</h2>
-	      <p>Any kind of feedback is appreciated, including the ones about this website but also about the puzzlers themselves.
-		If there is something you would like to let us know, please <a href="/contact.html">contact us</a>.
+	      <p>Any kind of feedback is appreciated, about the website but also about the puzzlers themselves. If there is something you would like to let us know, please <a href="/contact.html">contact us</a>.
 		</p>
 	    </div>
           </div>
           <footer class="footer">
 
-             Copyright 2012, Andrew Phillips and Nermin Serifovic
+             Copyright &copy; 2012, Andrew Phillips and Nermin Serifovic
 	  </footer>
           </div> 
           </div>         
