--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Puzzlers</li>
-              <li><a href="#" id="pzzlr-001">Hi there!</a></li>
-              <li><a href="#" id="pzzlr-002">Match me</a></li>
+              <li><a href="#" id="pzzlr-001">Hi There!</a></li>
+              <li><a href="#" id="pzzlr-002">Match Me</a></li>
               <li><a href="#" id="pzzlr-003">UPSTAIRS downstairs</a></li> 
               <li><a href="#" id="pzzlr-004">The Trouble With Traits</a></li>
 	      <li><a href="#" id="pzzlr-005">The Trouble With Traits 2</a></li>
