--- a/contribute.html
+++ b/contribute.html
@@ -28,6 +28,9 @@
   <!-- Navbar
    ================================================== -->
     <div class="navbar navbar-fixed-top">
+      <a target="_blank" href="https://github.com/scalapuzzlers/scalapuzzlers.github.com">
+        <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" 								      alt="Fork me on GitHub">
+      </a>
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
