removed random ' from the template

--- a/puzzlers/pzzlr-template.html
+++ b/puzzlers/pzzlr-template.html
@@ -3,7 +3,7 @@
   <tbody>
     <tr>
       <td><strong>Contributed by</strong></td>
-'     <td>PLACEHOLDER</td>
+      <td>PLACEHOLDER</td>
     </tr>
     <tr>
       <td><strong>Source</strong></td>
