deleted leading ' and added more explanations to the code

--- a/puzzlers/pzzlr-008.html
+++ b/puzzlers/pzzlr-008.html
@@ -3,7 +3,7 @@
   <tbody>
     <tr>
       <td><strong>Contributed by</strong></td>
-'     <td>Simon Schaefer</td>
+      <td>Simon Schaefer</td>
     </tr>
     <tr>
       <td><strong>Source</strong></td>
@@ -58,7 +58,7 @@ while (i < values.length) {
 }
 funcs foreach (f => println(f()))
   </pre>
-  This will print three times the number 120.
+  This will print three times the number 120. Nevertheless most times the expected behavior is to print the elements of the Array. To achieve this one should use immutable values.
   </p>
 </div>
 
