--- a/puzzlers/pzzlr-009.html
+++ b/puzzlers/pzzlr-009.html
@@ -3,7 +3,7 @@
   <tbody>
     <tr>
       <td><strong>Contributed by</strong></td>
-'     <td>Simon Schaefer</td>
+      <td>Simon Schaefer</td>
     </tr>
     <tr>
       <td><strong>Source</strong></td>
