--- a/puzzlers/pzzlr-012.html
+++ b/puzzlers/pzzlr-012.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://stackoverflow.com/questions/9449474/def-vs-val-vs-lazy-val-evaluation-in-scala/9450146#9450146"></a>stackoverflow</td>
+      <td><a target="_blank" href="http://stackoverflow.com/questions/9449474/def-vs-val-vs-lazy-val-evaluation-in-scala/9450146#9450146">stackoverflow</a></td>
     </tr>
     <tr>
       <td><strong>Tested with Scala version</strong></td>
@@ -30,7 +30,7 @@
   </pre>
   <ol>  
     <li>No output at all</li>
-    <li>\<lazy\> since value defined as lazy and will not be evaluated</li>
+    <li>&lt;lazy&gt; since value defined as lazy and will not be evaluated</li>
     <li>Empty line.</li>
     <li id="correct-answer">1 will be outputted</li>
   </ol>
