Added puzzlers 8 & 9 (contributed by Simon Schaefer) to the menu

--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
               <li><a href="#" id="pzzlr-002">Match Me</a></li>
               <li><a href="#" id="pzzlr-003">UPSTAIRS downstairs</a></li> 
               <li><a href="#" id="pzzlr-004">The Trouble With Traits</a></li>
-	      <li><a href="#" id="pzzlr-005">The Trouble With Traits 2</a></li>
-	      <li><a href="#" id="pzzlr-006">The Missing List</a></li>  
-	      <li><a href="#" id="pzzlr-007">Seeing Double</a></li>                                                
+              <li><a href="#" id="pzzlr-005">The Trouble With Traits 2</a></li>
+              <li><a href="#" id="pzzlr-006">The Missing List</a></li>  
+              <li><a href="#" id="pzzlr-007">Seeing Double</a></li>
+              <li><a href="#" id="pzzlr-008">Captured by Closures</a></li>
+              <li><a href="#" id="pzzlr-009">Map Comprehension</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
