--- a/about.html
+++ b/about.html
@@ -107,9 +107,11 @@
               <li><a href="/#pzzlr-002" id="pzzlr-002">Match Me</a></li>
               <li><a href="/#pzzlr-003" id="pzzlr-003">UPSTAIRS downstairs</a></li> 
               <li><a href="/#pzzlr-004" id="pzzlr-004">The Trouble With Traits</a></li>
-	      <li><a href="/#pzzlr-005" id="pzzlr-005">The Trouble With Traits 2</a></li>
-	      <li><a href="/#pzzlr-006" id="pzzlr-006">The Missing List</a></li>  
-	      <li><a href="/#pzzlr-007" id="pzzlr-007">Seeing Double</a></li>                                                
+              <li><a href="/#pzzlr-005" id="pzzlr-005">The Trouble With Traits 2</a></li>
+              <li><a href="/#pzzlr-006" id="pzzlr-006">The Missing List</a></li>
+              <li><a href="/#pzzlr-007" id="pzzlr-007">Seeing Double</a></li>
+              <li><a href="/#pzzlr-008" id="pzzlr-008">Captured by Closures</a></li>
+              <li><a href="/#pzzlr-009" id="pzzlr-009">Map Comprehension</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
