Nicer spacing on syntax highlighted answers in 8 & 9

--- a/puzzlers/pzzlr-008.html
+++ b/puzzlers/pzzlr-008.html
@@ -41,23 +41,19 @@ funcs2.foreach { f2 => println(f2()) }
      -->
     <li id="correct-answer"><tt>funcs1</tt> prints
       <pre class="prettyprint lang-scala">
-      100, 110, 120
-      </pre>
+100, 110, 120</pre>
       whereas <tt>funcs2</tt> throws an <tt>ArrayIndexOutOfBoundsException</tt></li>
     <li>Both print
       <pre class="prettyprint lang-scala">
-      100, 110, 120
-      </pre>
+100, 110, 120</pre>
     </li>
     <li>The code does not compile</li>
     <li><tt>funcs1</tt> prints
       <pre class="prettyprint lang-scala">
-      100, 110, 120
-      </pre>
+100, 110, 120</pre>
       whereas <tt>funcs2</tt> prints
       <pre class="prettyprint lang-scala">
-      120, 120, 120
-      </pre>
+120, 120, 120</pre>
     </li>
   </ol>
 </div>
