--- a/puzzlers/pzzlr-006.html
+++ b/puzzlers/pzzlr-006.html
@@ -3,7 +3,7 @@
   <tbody>
     <tr>
       <td><strong>Contributed by</strong></td>
-'     <td>Andrew Phillips & Nermin Serifovic</td>
+      <td>Andrew Phillips & Nermin Serifovic</td>
     </tr>
     <tr>
       <td><strong>Source</strong></td>
