--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head> 
 <title> Scala Puzzlers </title>
- <link rel="shortcut icon" href="/img/favicon.gif" type="image/x-icon" />
- <link href="/css/bootstrap.min.css" rel="stylesheet">
- <link href="/css/prettify.css" type="text/css" rel="stylesheet" />
+ <link rel="shortcut icon" href="img/favicon.gif" type="image/x-icon" />
+ <link href="css/bootstrap.min.css" rel="stylesheet">
+ <link href="css/prettify.css" type="text/css" rel="stylesheet" />
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
- <script type="text/javascript" src="/js/prettify.js"></script>
+ <script type="text/javascript" src="js/prettify.js"></script>
  <script type="text/javascript">
 
    var _gaq = _gaq || [];
@@ -44,16 +44,16 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li>
-                <a id="navbar-home" href="/index.html">Home</a>
+                <a id="navbar-home" href="index.html">Home</a>
               </li>
               <li>
-                <a id="navbar-contribute" href="/contribute.html">How to Contribute</a>
+                <a id="navbar-contribute" href="contribute.html">How to Contribute</a>
               </li>
               <li>
-                <a id="navbar-contact" href="/contact.html">Contact</a>
+                <a id="navbar-contact" href="contact.html">Contact</a>
               </li>
 	      <li>
-		<a id="navbar-about" href="/about.html">About</a>
+		<a id="navbar-about" href="about.html">About</a>
 	      </li>
             </ul>
           </div>
@@ -68,10 +68,10 @@
 
       var pathToID = {
         "/"                        : '#navbar-home',
-        "/index.html"              : '#navbar-home', 
-        "/contribute.html"	 : '#navbar-contribute',   
-        "/contact.html"          : '#navbar-contact',
-	"/about.html"		 : '#navbar-about'
+        "index.html"              : '#navbar-home', 
+        "contribute.html"	 : '#navbar-contribute',   
+        "contact.html"          : '#navbar-contact',
+	"about.html"		 : '#navbar-about'
       };
 
       $(document).ready(function() {
