updated code App => REPL

--- a/puzzlers/pzzlr-011.html
+++ b/puzzlers/pzzlr-011.html
@@ -37,8 +37,7 @@ println(cc1.## == cc2.##)
 </pre>
 
 <ol>
-<li>
-Prints:
+<li>Prints:
 <pre class="prettyprint lang-scala">
 false
 false
@@ -47,8 +46,7 @@ false
 </pre>
 </li>
 
-<li id="correct-answer">
-Prints:
+<li id="correct-answer">Prints:
 <pre class="prettyprint lang-scala">
 false
 false
@@ -57,8 +55,7 @@ true
 </pre>
 </li>
 
-<li>
-Prints:
+<li>Prints:
 <pre class="prettyprint lang-scala">
 false
 false
@@ -67,8 +64,7 @@ false
 </pre>
 </li>
 
-<li>
-Prints:
+<li>Prints:
 <pre class="prettyprint lang-scala">
 false
 false
