changed intro question

--- a/puzzlers/pzzlr-010.html
+++ b/puzzlers/pzzlr-010.html
@@ -16,7 +16,7 @@
   </tbody>  
 </table>
 <div class="code-snippet">
-<h3>What does the following code print?</h3>
+<h3>What does the following code do?</h3>
 <pre class="prettyprint lang-scala">
 object XY {
   object X {
@@ -47,11 +47,9 @@ Nnondeterministicly prints either <tt>1</tt> or <tt>2</tt>.
 Fails with a compilation error.
 </li>
 
-<!--
 <li>
 Fails at runtime with a <tt>StackOverflowError</tt>.
 </li>
--->
 
 </ol>
 
