Added puzzlers 10 and 11, submitted by Dominik Gruntz. Thanks, Dominik!

--- a/contact.html
+++ b/contact.html
@@ -112,6 +112,8 @@
               <li><a href="/#pzzlr-007" id="pzzlr-007">Seeing Double</a></li> 
               <li><a href="/#pzzlr-008" id="pzzlr-008">Captured by Closures</a></li>
               <li><a href="/#pzzlr-009" id="pzzlr-009">Map Comprehension</a></li>
+              <li><a href="/#pzzlr-010" id="pzzlr-010">Init You, Init Me</a></li>
+              <li><a href="/#pzzlr-011" id="pzzlr-011">A Case of Equality</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
