--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
               <li><a href="#" id="pzzlr-007">Seeing Double</a></li>
               <li><a href="#" id="pzzlr-008">Captured by Closures</a></li>
               <li><a href="#" id="pzzlr-009">Map Comprehension</a></li>
+              <li><a href="#" id="pzzlr-010">Init You, Init Me</a></li>
+              <li><a href="#" id="pzzlr-011">A Case of Equality</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
