Aligned formatting of answers with other puzzlers

--- a/puzzlers/pzzlr-010.html
+++ b/puzzlers/pzzlr-010.html
@@ -32,15 +32,28 @@ if(math.random > 0.5) XY.X.value else XY.Y.value
 
 <ol>
 <li>
-Always prints <tt>1</tt>.
+Always prints
+<pre class="prettyprint lang-scala">
+1
+</pre>
 </li>
 
 <li id="correct-answer">
-Always prints <tt>2</tt>.
+Always prints
+<pre class="prettyprint lang-scala">
+2
+</pre>
 </li>
 
 <li>
-Nnondeterministicly prints either <tt>1</tt> or <tt>2</tt>.
+Nnondeterministicly prints either
+<pre class="prettyprint lang-scala">
+1
+</pre>
+or
+<pre class="prettyprint lang-scala">
+2
+</pre>
 </li>
 
 <li>
